<?xml version="1.0" encoding="utf-8" ?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pesquisar"
            app:menu="@menu/menu" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dip"
            android:layout_marginEnd="16dip"
            android:layout_marginBottom="3dip"
            android:scrollbars="vertical" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/procurar_por_anime"
        app:layout_anchor="@id/search_bar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBusca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dip"
            android:layout_marginEnd="16dip"
            android:layout_marginBottom="3dip"
            android:scrollbars="vertical" />

        <include layout="@layout/nenhum_lembrete"/>

    </com.google.android.material.search.SearchView>

    <include layout="@layout/nenhum_lembrete"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center|end"
        android:layout_margin="16.0dip"
        android:src="@drawable/kunai"
        app:fabSize="normal"
        app:tint="@null"
        android:contentDescription="@string/novo_lembrete" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
